Implement coroutines and change test_runner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,11 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
-add_executable(ether 
-    src/main.cpp
-    src/lexer/lexer.cpp
-    src/parser/parser.cpp
-    src/ir/ir.cpp
-    src/ir/ir_gen.cpp
-    src/vm/vm.cpp
+file(GLOB_RECURSE SOURCES 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
 )
 
-target_include_directories(ether PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+add_executable(ether ${SOURCES})
 
-add_executable(test_runner test/test_runner.cpp)
+target_include_directories(ether PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
