--- a/.vscode/extensions/ether-vscode/package.json
+++ b/.vscode/extensions/ether-vscode/package.json
@@ -49,7 +49,13 @@
                     "description": "Path to the ether compiler executable."
                 }
             }
-        }
+        },
+        "commands": [
+            {
+                "command": "ether.restartServer",
+                "title": "Ether: Restart language server"
+            }
+        ]
     },
     "dependencies": {
         "vscode-languageclient": "^8.0.2"
